
[package]
name = "dsalgo"
version = "0.3.9"
edition = "2021"
description = "A package for Datastructures and Algorithms."
documentation = "https://docs.rs/dsalgo"
repository = "https://github.com/kagemeka/dsalgo-rust"
authors = ["kagemeka <kagemeka1@gmail.com>"]
categories = ["algorithms", "data-structures"]
license-file = "LICENSE"
readme = "README.md"
